Working on pages

--- a/templates-v0.8/presti.html
+++ b/templates-v0.8/presti.html
@@ -343,19 +343,80 @@ Presti is built with a rich typographic set of OpenType features: this goes beyo
                     <div style="line-height: 1.4em;font-size: 2em;" class="ss12">Super swashes type #5</div>
                     <div style="line-height: 1.4em;font-size: 2em;" class="ss12-ss20">Super swashes type #5</div>
                 </p>
-
-                <button class="buy-button upgrade" 
-                    type="button"
-                    fontdue-click="open-store-modal"
-                    fontdue-store-route="product/Rm9udENvbGxlY3Rpb246MTkyMDQ3OTcwMDEwMzg5OTcyMg=="
-                    fontdue-store-select="U2t1OjE5MjA0ODE0NDY2MDM2OTY3NzA="
-                    >
-                    Add Presti to cart
-                </button>                
             </div>
         </div>
     </section>
 
+    <section>
+        <div class="row">
+            <div class="column14">
+                <div style="margin: 20px">
+                    <button class="buy-button upgrade" 
+                        type="button"
+                        fontdue-click="open-store-modal"
+                        fontdue-store-route="product/Rm9udENvbGxlY3Rpb246MTkyMDQ5NTAxMjU0MzExMzIzNQ=="
+                        fontdue-store-select="U2t1OjE5MjA0OTUyMjgzOTg3NzQyOTM="
+                        >
+                        Add to cart
+                    </button>
+                </div>
+            </div>
+            <div class="column34 upgrade" id="weightsStyles">
+                <h1 class="upgrade-bold size36">Upgrade<span class="upgrade"> weights & styles</span></h1>
+            </div>
+        </div>
+
+        <div class="row type-tester responsiveHide"> <!-- Upgrade type tester -->
+            <div style="width: 95%">
+                <fontdue-type-testers collection-id="Rm9udENvbGxlY3Rpb246MTkyMDQ5NTAxMjU0MzExMzIzNQ=="></fontdue-type-testers>
+            </div>
+        </div>
+        <div class="row smallWeightTester">
+            <div class="upgrade-thin size100">Upgrade
+            <span class="upgrade-thin-italic size100">Italic</span></div>
+            <div class="upgrade-light size100">Upgrade</div>
+            <div class="upgrade-light-italic size100">Italic</div>
+            <div class="upgrade size100">Upgrade</div>
+            <div class="upgrade-italic size100">Italic</div>
+            <div class="upgrade-medium size100">Upgrade</div>
+            <div class="upgrade-medium-italic size100">Italic</div>
+            <div class="upgrade-semibold size100">Upgrade</div>
+            <div class="upgrade-semibold-italic size100">Italic</div>
+            <div class="upgrade-bold size100">Upgrade</div>
+            <div class="upgrade-bold-italic size100">Italic</div>
+            <div class="upgrade-black size100">Upgrade</div>
+            <div class="upgrade-black-italic size100">Italic</div>
+        </div>
+
+    </section>
+
+    <section>
+        <div class="row responsiveHide">
+            <div class="column14">
+                <div style="margin: 20px">
+                    <button class="buy-button upgrade" 
+                        type="button"
+                        fontdue-click="open-store-modal"
+                        fontdue-store-route="product/Rm9udENvbGxlY3Rpb246MTkyMDQ5NTAxMjU0MzExMzIzNQ=="
+                        fontdue-store-select="U2t1OjE5MjA0OTUyMjgzOTg3NzQyOTM="
+                        >
+                        Add to cart
+                    </button>
+                </div>
+            </div>
+            <div class="column34 upgrade" id="glyphSet">
+                <h1 class="upgrade-bold size36">Upgrade<span class="upgrade"> glyph set</span></h1>
+            </div>
+        </div>
+
+        <div class="row type-tester responsiveHide"> <!-- Upgrade character viewer -->
+            <div style="width: 95%">
+                <fontdue-character-viewer collection-id="Rm9udENvbGxlY3Rpb246MTkyMDQ5NTAxMjU0MzExMzIzNQ=="></fontdue-character-viewer>
+            </div>
+        </div>
+
+    </section>
+    
     <section>
         <div class="row type-tester"> <!-- Upgrade character viewer -->
             <fontdue-character-viewer collection-id="Rm9udENvbGxlY3Rpb246MTkyMDQ3OTc4MjM2MjU4OTc3Nw=="></fontdue-character-viewer>
