--- a/templates-v0.8/upgrade.html
+++ b/templates-v0.8/upgrade.html
@@ -106,7 +106,7 @@
           truncate: 'true',
           shy: false,
           buyButton: false,
-          selectButtonLabel: 'Buy',
+          selectButtonLabel: 'Add to cart',
           selectButtonStyle: 'solid',
           },
       },
