--- a/templates-v0.8/responder-p.html
+++ b/templates-v0.8/responder-p.html
@@ -108,7 +108,7 @@
           truncate: 'true',
           shy: false,
           buyButton: false,
-          selectButtonLabel: 'Buy',
+          selectButtonLabel: 'Add to cart',
           selectButtonStyle: 'solid',
           },
       },
