--- a/templates-v0.8/upgrade.html
+++ b/templates-v0.8/upgrade.html
@@ -201,12 +201,12 @@
         </div>
 
         <div class="row">
-            <div class="column14">
+            <div class="column14 topline">
                 <div style="margin: 20px">
                     <img src="images/2018/Upgrade-otfeaturesmenu.png">
                 </div>
             </div>
-            <div class="column34 upgrade">
+            <div class="column34 upgrade topline">
                 <h1 class="upgrade-bold size36">Upgrade<span class="upgrade"> OpenType features</span></h1>
                 <p class="size24">
                     TYPETR Upgrade family implements an extended OpenType feature set.
@@ -271,8 +271,28 @@
     </section>
 
     <section>
-        <div class="row type-tester"> <!-- Upgrade character viewer -->
-            <fontdue-character-viewer collection-id="Rm9udENvbGxlY3Rpb246MTkyMDQ5NTAxMjU0MzExMzIzNQ=="></fontdue-character-viewer>
+        <div class="row responsiveHide">
+            <div class="column14 topline">
+                <div style="margin: 20px">
+                    <button class="buy-button upgrade" 
+                        type="button"
+                        fontdue-click="open-store-modal"
+                        fontdue-store-route="product/Rm9udENvbGxlY3Rpb246MTkyMDQ5NTAxMjU0MzExMzIzNQ=="
+                        fontdue-store-select="U2t1OjE5MjA0OTUyMjgzOTg3NzQyOTM="
+                        >
+                        Add to cart
+                    </button>
+                </div>
+            </div>
+            <div class="column34 topline upgrade">
+                <h1 class="upgrade-bold size36">Upgrade<span class="upgrade"> glyph set</span></h1>
+            </div>
+        </div>
+
+        <div class="row type-tester responsiveHide"> <!-- Upgrade character viewer -->
+            <div style="width: 95%">
+                <fontdue-character-viewer collection-id="Rm9udENvbGxlY3Rpb246MTkyMDQ5NTAxMjU0MzExMzIzNQ=="></fontdue-character-viewer>
+            </div>
         </div>
     </section>
     
